--- a/examples/compressed/index.html
+++ b/examples/compressed/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Gizmo</title>
+    <title>Texture compression</title>
     <link rel="stylesheet" type="text/css" href="../templates/css/base.css">
 
     <!-- Javascript -->
@@ -12,6 +12,11 @@
     <script type="text/javascript" src="../vendors/hammer.js"></script>
     <script type="text/javascript" src="../vendors/leap.js"></script>
     <script type="text/javascript" src="../../builds/dist/OSG.js"></script>
+    <script type="text/javascript" src="crunch.js"></script>
+    <script type="text/javascript" src="decompressCRN.js"></script>
+    <script type="text/javascript" src="loadCRN.js"></script>
+    <script type="text/javascript" src="dxt1ToRgb565.js"></script>
+    <script type="text/javascript" src="dxt5ToRgba8888.js"></script>
     <script type="text/javascript" src="main.js"></script>
 
 </head>
@@ -32,7 +37,7 @@
     </a>
 
     <div class="osgjs-description">
-      Demonstrate gizmo editing:  click on model, select gizmo axis by clicking and moving while still mouse button pushed.
+      Demonstrate webgl texture compression
     </div>
 
   </div>
